# pyamg

./: .coveragerc  .gitignore  .readthedocs.yml  .svnignore  .travis.yml  CITATION.bib  CITATION.cff  CONTRIBUTING.md  DEVELOPERS.txt  DEV_README.txt  INSTALL.txt  LICENSE.txt  MANIFEST.in  README-DEV.md  README.md  _typos.toml  appveyor.yml  changelog.md  common_docstring.txt  conversionplan.md  meson.build  new_manifest.sh  organization.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  setupegg.py  test_pyamg_install.py  todo.md  tox.ini  version_tools.py
.github/workflows/: ci.yml  docstrings.yml  draft-pdf.yml  lint.yml  wheels.yml
Docs/: Makefile  README  notes.md  requirements.txt
Docs/dev/: todo.md
Docs/diagrams/: BlockDiagrams.odp  Functionality.odp
Docs/logo/: pyamg_logo.py  pyamg_s30a30.mat  pyamglogo.m
Docs/source/: classical.rst  conf.py  gallery.rst  graph.rst  index.rst  modules.rst  multilevel.rst  pyamg.aggregation.rst  pyamg.aggregation.tests.rst  pyamg.amg_core.rst  pyamg.classical.rst  pyamg.classical.tests.rst  pyamg.gallery.rst  pyamg.gallery.tests.rst  pyamg.krylov.rst  pyamg.krylov.tests.rst  pyamg.relaxation.rst  pyamg.relaxation.tests.rst  pyamg.rst  pyamg.testing.rst  pyamg.tests.rst  pyamg.util.rst  pyamg.util.tests.rst  pyamg.vis.rst  pyamg.vis.tests.rst  ref.rst  setup.rst  strength.rst  testing.rst  util.rst  vis.rst
Docs/sphinxext/: generate_modules.py
Examples/: Airfoil_aggs.mat  example_cr.py  test_pyamg.py
Examples/0STARTHERE/: demo.py
Examples/Aggregation/: demo.py  draw.py  square.mat
Examples/Blackbox/: demo.py
Examples/CoarseFineSplitting/: demo.py
Examples/CompatibleRelaxation/: demo.py
Examples/Complex/: demo.py
Examples/ComplexSymmetric/: convergence_tools.py  demo_one_D_helmholtz.py  demo_two_D_helmholtz.py  my_vis.py  one_D_helmholtz.py  smoothed_aggregation_helmholtz_solver.py
Examples/Diffusion/: convergence_tools.py  demo_anisotropic_convergence.py  demo_anisotropic_scalability.py  demo_local_disc_galerkin_diffusion.py  demo_strength_measures.py  diffusion_convergence_test.py  diffusion_scalability_test.py  my_vis.py  strength_measures_test.py
Examples/DolfinFormulation/: demo.py
Examples/EdgeAMG/: edgeAMG.py
Examples/Eigensolver/: driver.py
Examples/FiPyFormulation/: PyAMGSolver.py  demo.py
Examples/GeneralSolver/: demo.py
Examples/LinearElasticity/: driver.py
Examples/Nonsymmetric/: convergence_tools.py  demo_recirc_flow.py
Examples/OneDimension/: demo.py  oneD_diffusion.py  oneD_tools.py  oneD_vis.py
Examples/Partition/: crack_mesh.mat  demo.py  helper.py
Examples/Preconditioning/: demo.py
Examples/Rootnode/: demo.py  draw.py
Examples/SWIG/: README  _cg.py  gallery.py  precondition.py  setup.py  splinalg.h  splinalg.i  testbasic.py
Examples/SlideTasks/: task1.3.py  task1.4.py  task1.5.py  task1.6.py
Examples/SolverDiagnostics/: demo.py  solver_diagnostics.py  solver_diagnostics_driver.py
Examples/StrengthTest/: demo.py
Examples/Unsorted/: Airfoil.mat  lloyd.py  test_dg_p1.mat  test_pyamg.py
Examples/Visualization_ConnectionViewer/: cvoutput.py  demo.py
Examples/VisualizingAggregation/: demo1.py  demo2.py
Examples/WorkshopCopper11/: %gconf.xml  WorkshopSlides.key  task1.4.py  task1.5.py  task1.6.py  task2.2.py  task2.3.py  task2.4.py  task2.5.py
Examples/WorkshopCopper12/: WorkshopSlides.key  task0.1.py  task1.1.py  task1.2.py  task1.3.py  task2.1.py  task2.4.py
Examples/vis/: example_vis.py  test_dg.mat  test_dg_p2.mat
bench/: memory.py
benchmarks/: bench_poisson.py
docs/: README.md  requirements.txt
docs/dev/: common_docstring.md
docs/logo/: README.txt  pyamg_logo.py
docs/paper/: common.py  example.py  example.res.txt  example_plot.py  paper.bib  paper.md
docs/source/: conf.py  index.rst  pyamg.aggregation.rst  pyamg.amg_core.rst  pyamg.classical.rst  pyamg.gallery.rst  pyamg.krylov.rst  pyamg.relaxation.rst  pyamg.rst  pyamg.util.rst  pyamg.vis.rst  ref.rst
pyamg/: Jacob_complexity.py  TODO_complexity.txt  __init__.py  _solveit.py  adaptive.py  aggregation.py  blackbox.py  citation.bib  classical.py  cr.py  ex-bf-1.py  example_cr.py  graph.py  graph_ref.py  info.py  mgopts.py  multilevel.py  relaxation.py  rs.py  sa.py  sa_energy_min.py  sa_ode_strong_connections.py  setup.py  split.py  strength.py  utils.py  version.py
pyamg/_tools/: _tester.py
pyamg/aggregation/: __init__.py  adaptive.py  aggregate.py  aggregation.py  bootstrap.py  energymin_cf_solver.py  enmin_CF_solver.py  pairwise.py  rootnode.py  setup.py  smooth.py  tentative.py  try1.py
pyamg/amg_core/: README.txt  __init__.py  air.h  air_bind.cpp  amg_core.i  amg_core.py  amg_core_old.i  amg_core_py2.cxx  amg_core_py3.py  amg_core_wrap.cxx  bindthem.py  build.sh  build_relaxation.sh  buildone.sh  evolution_strength.h  evolution_strength_bind.cpp  example_bind.cpp  generate.sh  generate_bindings.py  graph-todo.md  graph.h  graph.py  graph2.py  graph_bind.cpp  instantiate-test.yml  instantiate.yml  krylov.h  krylov_bind.cpp  linalg.h  linalg_bind.cpp  notes.md  numpy.i  ode_strength.h  readme.md  relaxation.h  relaxation_bind.cpp  relaxation_wrap.cpp  requirements-dev.txt  ruge_stuben.h  ruge_stuben_bind.cpp  (+11 more)
pyamg/bootstrap/: __init__.py  bootstrap.py
pyamg/classical/: __init__.py  aci.py  acr.py  air.py  air_pert.py  air_schwarz.py  classical.py  cr.py  gen_air.py  geoamg.py  interpolate.py  setup.py  split.py
pyamg/dev/: C_development.cpp  aSA_driver.py  ben_ideal.cpp  elasticity_bar.py  poisson.py
pyamg/gallery/: __init__.py  advection.py  bilinear_diffusion.py  convergence_tools.py  demo.py  diffusion.py  diffusion_convergence_test.py  diffusion_stencil.py  elasticity.py  example.py  fem.py  info.py  laplacian.py  mesh.py  random_sparse.py  setup.py  sprand.py  stencil.py  test_fem.py
scripts/: appveyor-download.py  checkvalgrind.sh  example_lloyd.py  readme.md  test_lloyd_blank.py  test_omp.py  try_omp.py  try_sparse.py  valgrind-extras.supp  valgrind-python.supp  valgrind_run.sh  valgrind_setup.sh
(+187 files in other folders)
