[metadata]
name = pyamg
version = attr: pyamg.__version__
description = PyAMG: Algebraic Multigrid Solvers in Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = algebraic multigrid, AMG, sparse matrix, preconditioning
author= Nathan Bell, Luke Olson, and Jacob Schroder
author_email = luke.olson@gmail.com
maintainer = Luke Olson
maintainer_email = luke.olson@gmail.com
url = https://github.com/pyamg/pyamg
download_url = https://github.com/pyamg/pyamg/releases
license = MIT
license_filel = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = False
packages = find:
platforms = any
python_requires = >=3.6
install_requires =
    numpy>=1.7.0
    scipy>=0.12.0
    pytest>=2

[options.packages.find]
exclude =
    docs
    README-DEV.md

[options.package_data]
pyamg =
    gallery/example_data/*.mat
    gallery/mesh_data/*.npz

[pycodestyle]
ignore = E226
exclude = amg_core.py

[coverage:report]
omit =
    *tests/*
    *__init__.py
    *info.py
    setup.py
    *version.py
    version_tools.py

[flake8]
max-line-length = 92
target-version = ['py38']
exclude =
  pyamg/amg_core/bindthem.py
#ignore =
#  E2
per-file-ignores =
  pyamg/gallery/tests/test_fem.py: E201, E202, E203
